--- a/style.css
+++ b/style.css
@@ -94,3 +94,22 @@ main {
 .movie:hover .overview{
     transform: translateY(0);
 }
+.buttons{
+
+    width: 40%;
+    background-color: #0c0c10;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    margin: auto;
+    height: 50px;
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.btn{
+    padding: 0.5rem 1rem;
+    font-size: 20px;
+    font-weight: 500;
+    border-radius: 10px;
+}
