--- a/style.css
+++ b/style.css
@@ -86,30 +86,53 @@ main {
     bottom: 0;
     right: 0;
     padding: 2rem;
-    max-height:100%;
+    max-height: 100%;
     transform: translateY(100%);
-    transition:transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out;
 }
 
-.movie:hover .overview{
+.movie:hover .overview {
     transform: translateY(0);
 }
-.buttons{
 
-    width: 40%;
+.buttons {
+    position: fixed;
+    right: 0;
+    top: 40%;
+    height: 300px;
     background-color: #0c0c10;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
     margin: auto;
-    height: 50px;
     border-radius: 20px;
-    padding: 10px;
+    padding: 5px;
+    opacity: 0.2;
+    transition: all 1s ease-in-out;
+
 }
 
-.btn{
+.buttons .btn{
+
+}
+
+.buttons:hover{
+    opacity: 1;
+    width: auto;
+}
+
+.btn {
     padding: 0.5rem 1rem;
     font-size: 20px;
     font-weight: 500;
     border-radius: 10px;
+}
+
+#num{
+    color: green;
+    background-color: lavender;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 28px;
 }
